--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,5 +1,28 @@
-@import './_var/variables.scss';
+@import './abstracts/functions';
+@import './abstracts/mixins';
+@import './abstracts/variables';
 
-body{
-  color: $gray;
-}
+@import './base/base';
+@import './base/animations';
+@import './base/typography';
+@import './base/utilities';
+
+
+@import './components/btn';
+@import './components/composition';
+@import './components/feature-box';
+@import './components/card';
+@import './components/story';
+@import './components/bg-video';
+@import './components/form';
+@import './components/popup';
+
+@import './layout/navigation';
+@import './layout/header';
+@import './layout/footer';
+@import './layout/grid';
+
+@import './pages/home';
+
+@import './vendor/icon-font';
+
