--- a/index.ejs
+++ b/index.ejs
@@ -1,11 +1,452 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>webpack3 boilerplate</title>
-</head>
-<body>
-  <p>Boilerplate is up and ready</p>
-</body>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+      <title>Natours | Exciting tours for adventurous people</title>
+  </head>
+  <body>
+    <div class="navigation">
+      <input type="checkbox" id="navi-toggle" class="navigation__checkbox">
+      <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">
+          &nbsp;
+        </span>
+      </label>
+      <div class="navigation__background">
+        &nbsp;
+      </div>
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <header class="header">
+      
+      <div class="header__logo-box">
+        <img class="header__logo" src="./assets/img/logo-white.png" alt="Logo">
+      </div>
+
+
+      <div class="header__text-box">
+        <h1 class="heading-primary">
+          <span class="heading-primary--main">
+            Outdoors
+          </span>
+          <span class="heading-primary--sub">
+            is where life happens
+          </span>
+        </h1>
+
+        <a class="btn btn--white btn--animated" href="#">
+          Discover Our Tours
+        </a>
+
+      </div>
+      
+    </header>
+
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                Exiting tours for adventures people
+            </h2>
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-2">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                You're going to fall in love with nature
+              </h3>
+              <p class="paragraph">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos expedita quae quos. Cum mollitia ea necessitatibus molestias aut est provident voluptatem rerum, dolores, nihil nobis assumenda neque commodi ipsam veritatis.
+              </p>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Live anventures like you never have before
+              </h3>
+              <p class="paragraph">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos expedita quae quos.
+              </p>
+              <a href="#" class="btn-text">
+                Learn more &rarr;
+              </a>
+            </div>
+            <div class="col-1-of-2">
+              <div class="composition">
+
+                <img 
+                  srcset="./assets/img/nat-1.jpg 300w, ./assets/img/nat-1-large.jpg 1000w" 
+                  sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                  class="composition__photo composition__photo--p1"
+                  src="./assets/img/nat-1-large.jpg"
+                  alt="photo 1"
+                >
+
+                <img 
+                  srcset="./assets/img/nat-2.jpg 300w, ./assets/img/nat-2-large.jpg 1000w" 
+                  alt="photo 2"
+                  sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                  class="composition__photo composition__photo--p2"
+                  src="./assets/img/nat-2-large.jpg"
+                >
+
+                <img 
+                  srcset="./assets/img/nat-3.jpg 300w, ./assets/img/nat-3-large.jpg 1000w" 
+                  alt="photo 3"
+                  sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                  class="composition__photo composition__photo--p3"
+                  src="./assets/img/nat-3-large.jpg"
+                >
+
+              </div>
+            </div>
+        </div>
+      </section>
+
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+              <p class="feature-box__text">
+                Velit iste soluta assumenda nostrum accusamus aliquid beatae enim placeat nemo nihil.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+              <p class="feature-box__text">
+                Velit iste soluta assumenda nostrum accusamus aliquid beatae enim placeat nemo nihil.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+              <p class="feature-box__text">
+                Velit iste soluta assumenda nostrum accusamus aliquid beatae enim placeat nemo nihil.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Live a helthier life</h3>
+              <p class="feature-box__text">
+                Velit iste soluta assumenda nostrum accusamus aliquid beatae enim placeat nemo nihil.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+              Most popular tours
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--1">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--1">
+                      The sea explorer
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>3 day tour</li>
+                    <li>Up to 30 people</li>
+                    <li>2 tours guides</li>
+                    <li>Sleep in cozy hotels</li>
+                    <li>Difficulty: easy</li>
+                  </ul>
+                </div>
+
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$297</p>
+                  </div>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+                <div class="card__side card__side--front">
+                    <div class="card__picture card__picture--2">
+                        &nbsp;
+                      </div>
+                      <h4 class="card__heading">
+                        <span class="card__heading-span card__heading-span--2">
+                            The forest hiker
+                        </span>
+                      </h4>
+                      <div class="card__details">
+                        <ul>
+                          <li>7 day tour</li>
+                          <li>Up to 40 people</li>
+                          <li>6 tours guides</li>
+                          <li>Sleep in provided tents</li>
+                          <li>Difficulty: medium</li>
+                        </ul>
+                      </div>
+                </div>
+                <div class="card__side card__side--back card__side--back-2">
+                    <div class="card__cta">
+                        <div class="card__price-box">
+                          <p class="card__price-only">Only</p>
+                          <p class="card__price-value">$497</p>
+                        </div>
+                        <a href="#popup" class="btn btn--white">Book now!</a>
+                      </div>
+                </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                  <div class="card__picture card__picture--3">
+                      &nbsp;
+                    </div>
+                    <h4 class="card__heading">
+                      <span class="card__heading-span card__heading-span--3">
+                          The snow adventurer
+                      </span>
+                    </h4>
+                    <div class="card__details">
+                      <ul>
+                        <li>5 day tour</li>
+                        <li>Up to 15 people</li>
+                        <li>3 tours guides</li>
+                        <li>Sleep in provided tents</li>
+                        <li>Difficulty: hard</li>
+                      </ul>
+                    </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-3">
+                  <div class="card__cta">
+                      <div class="card__price-box">
+                        <p class="card__price-only">Only</p>
+                        <p class="card__price-value">$897</p>
+                      </div>
+                      <a href="#popup" class="btn btn--white">Book now!</a>
+                    </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn btn--green">Discriver all tours</a>
+        </div>
+      </section>
+
+      <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="./assets/img/video.mp4" type="video/mp4">
+            <source src="./assets/img/video.webm" type="video/webm">
+              Your browser is not supported
+          </video>
+        </div>
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+              We make people genuinely happy
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+                <img 
+                  srcset="./assets/img/nat-8-small.jpg 300w, ./assets/img/nat-8.jpg 2000w" 
+                  alt="person on a tour"
+                  sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                  class="story__img"
+                  src="./assets/img/nat-8.jpg"
+                >
+              <figcaption class="story__caption">
+                Mary Smith
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia explicabo voluptatum eum quos laboriosam odio, fugiat nostrum temporibus maiores accusantium tempora deserunt neque, saepe nisi soluta rerum repellat dolor quam!
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+                <img 
+                  srcset="./assets/img/nat-9-small.jpg 300w, ./assets/img/nat-9.jpg 2000w" 
+                  alt="person on a tour"
+                  sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                  class="story__img"
+                  src="./assets/img/nat-9.jpg"
+                >
+              <figcaption class="story__caption">
+                Jack Wilson
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! My life completely diffrent now
+              </h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia explicabo voluptatum eum quos laboriosam odio, fugiat nostrum temporibus maiores accusantium tempora deserunt neque, saepe nisi soluta rerum repellat dolor quam!
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+      </section>
+
+      <section class="section-book">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <form action="#" class="form">
+                  <div class="u-margin-bottom-medium">
+                      <h2 class="heading-secondary">
+                          Start booking now
+                      </h2>
+                  </div>
+                <div class="form__group">
+                  <input id="name" type="text" class="form__input" placeholder="Full name" required>
+                  <label for="name" class="form__label">Full name</label>
+                </div>
+                <div class="form__group">
+                  <input id="email" type="email" class="form__input" placeholder="Email adress" required>
+                  <label for="email" class="form__label">Email adress</label>
+                </div>
+
+                <div class="form__group u-margin-bottom-medium">
+                  <div class="form__radio-group">
+                    <input name="size" type="radio" id="small" class="form__radio-input">
+                    <label for="small" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Small tour group
+                    </label>
+                  </div>
+                  <div class="form__radio-group">
+                    <input name="size" type="radio" id="large" class="form__radio-input">
+                    <label for="large" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Large tour group
+                    </label>
+                  </div>
+                </div>
+
+                <div class="from__group">
+                  <button class="btn btn--green">Next step &rarr;</button>
+                </div>
+
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__logo-box">
+        
+        <picture class="footer__logo">
+          <source srcset="./assets/img/logo-green-small-1x.png 1x, ./assets/img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)">
+          <img 
+            srcset="./assets/img/logo-green-1x.png 1x, ./assets/img/logo-green-2x.png 2x" 
+            alt="full logo" 
+            class="footer__logo"
+            src="./assets/img/logo-green-2x.png"
+          >
+        </picture>
+
+
+
+        
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Build by <a href="#" class="footer__link">Oleg Veskelen</a>. Designed by <a href="#" class="footer__link">Jonas Schmedtmann</a>. Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal and commercial use, but not claim it as your own design. A credit to the original author is of course highly appreciated!
+          </p>
+        </div>
+      </div>
+    </footer>
+
+    <div id="popup" class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+            <img 
+              srcset="./assets/img/nat-8-small.jpg 300w, ./assets/img/nat-8.jpg 2000w" 
+              alt="tour photo"
+              sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+              class="popup__img"
+              src="./assets/img/nat-8.jpg"
+            >
+            <img 
+              srcset="./assets/img/nat-9-small.jpg 300w, ./assets/img/nat-9.jpg 2000w" 
+              alt="tour photo"
+              sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+              class="popup__img"
+              src="./assets/img/nat-9.jpg"
+            >
+        </div>
+        <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read this terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum reiciendis ratione corporis voluptatem maiores ipsa vitae nulla nemo itaque nam facilis voluptatum corrupti dignissimos cum magni laudantium consequuntur, perspiciatis dolorum.
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
